Update 7.01 Understand and comply with investigations.md

--- a/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
+++ b/DOMAIN7: Security Operations/7.01 Understand and comply with investigations.md
@@ -402,3 +402,98 @@ Let’s start with the tools. A good investigator doesn’t just rely on instinc
 
 ## 7.1.5 Artifacts (e.g., data, computer, network, mobile device) ##
 
+No attacker leaves a system untouched, no breach happens without a trace, and no exfiltration is ever entirely invisible. Whether you're tracking a skilled cybercriminal or investigating an insider gone rogue, evidence is always left behind. The real challenge? Knowing where and how to find it.
+
+That’s where understanding investigation artifacts and applying Locard’s Exchange Principle can give you an edge.
+A century ago, Dr. Edmond Locard — often called the "Sherlock Holmes of Lyon" — taught the world an essential forensic truth: "*Every contact leaves a trace.*"
+
+In cybersecurity, this principle is no different. Every time a hacker interacts with a system, whether it’s through a phishing email, remote access, or malware deployment, they alter something. It could be a new file, an unexpected network connection, a timestamp shifted by microseconds, or a suspicious process running in memory.
+Your job, as a security professional, is to spot these disturbances in the digital "fabric" and tie them back to the threat. Even if the attacker believes they covered their tracks, the absence of normal behavior can itself become evidence.
+
+:necktie: Locard’s Principle is your mental model for assuming that every action in cyberspace leaves artifacts worth investigating.
+
+Let’s unpack the main places where this evidence hides.
+
+**Data** is the most direct and obvious evidence, but it’s also the most flexible and easily manipulated. Artifacts might include:
+- Files and Documents: Modified, deleted, or renamed.
+- Metadata: Who created a file, when it was last accessed, and by whom.
+- Database entries: New or missing records.
+- Configuration changes: Evidence of tampering with system settings or application configurations.
+
+Here’s why this matters: in real incidents, attackers often leave behind data artifacts as a side effect of their main goal. If they steal files, delete logs, or alter configurations to maintain persistence, these traces become critical proof points.
+Imagine walking into a crime scene in the physical world. You look for fingerprints, footprints, or scratches. In the digital world, your "crime scene" is the computer, and its internal state is your evidence.
+
+Artifacts here might include:
+- Event Logs: Windows Event Viewer, Linux syslogs.
+- Process Lists: What was running at the time of compromise?
+- Scheduled Tasks: Malicious persistence mechanisms.
+- Registry Entries (Windows): Modifications or newly added keys.
+
+:bulb: The computer’s operating system is like a witness with a perfect memory — but only if you capture its state before it’s altered or rebooted. That’s why proper imaging and volatile memory capture are so heavily emphasized in digital forensics.
+
+If computers are the crime scene, networks are the getaway route. Every connection to or from a system leaves traces, even if the attacker uses encryption, proxies, or Tor.
+Key network artifacts might include:
+- Firewall Logs: Blocked or allowed traffic patterns.
+- NetFlow Records: Source, destination, and data volume.
+- Packet Captures (PCAP): Direct evidence of conversations, sometimes even reconstructed files.
+- DNS Queries: A sneaky but common channel for exfiltration and command-and-control.
+
+Why is this gold for an investigator? Because network traffic is often stored in central locations — independent of whether the endpoint is wiped or altered. Attackers might control the victim machine, but they usually can't erase evidence from upstream routers or cloud firewall logs.
+
+In today’s workplace, **mobile devices** are often as important as desktops — sometimes even more so. Mobile devices offer investigators:
+- Call and Message Logs: Evidence of communication.
+- Geolocation Data: Where the device was at key times.
+- Application Data: Especially from cloud-synced apps like WhatsApp, Google Drive, or Dropbox.
+- Cache and Artifacts: Even deleted photos or chats can leave fingerprints.
+
+In the world of BYOD (Bring Your Own Device), this gets even more complicated — and interesting. Even if the breach happened on a company server, an insider might have copied sensitive files onto their phone. Locard's Principle would apply here, too: there’s always a trace, even across devices.
+So why is all this important? Because in an investigation, you don’t get second chances. Once you start pulling data, if you do it incorrectly — if you miss the hidden artifacts, fail to preserve timestamps, or neglect proper chain-of-custody — your case can fall apart.
+
+That’s why digital forensics isn’t just about running the right tools, but about cultivating the right mindset: one of careful observation, methodical work, and knowing which artifacts offer the most valuable clues.
+
+When you think like an investigator, you start connecting dots the moment you step into an incident. The clues might be subtle — a changed file hash, a deleted log entry, or a foreign IP address — but they’re always there.
+
+:necktie: Evidence isn't always where you expect, but it’s always somewhere.
+
+### Open Questions ###
+
+1. What does Locard’s Exchange Principle state, and why is it so important for cybersecurity investigations?
+
+<details> <summary>Show answer</summary> Locard’s Principle states that “every contact leaves a trace.” In cybersecurity, this means any interaction with a system — from login attempts to malware installation — alters something. Understanding this helps investigators stay alert to subtle changes in data, system state, or logs that attackers may leave behind. </details>
+
+2. Why are network artifacts often considered more reliable than endpoint artifacts during a cybersecurity investigation?
+
+<details> <summary>Show answer</summary> Network artifacts are often more reliable because they are usually stored centrally, making them harder for attackers to alter. Attackers who compromise an endpoint typically don't have access to the organization's network infrastructure, so logs from firewalls, proxies, and network appliances are less likely to be manipulated. </details>
+
+3. An IT investigator finds a suspicious process running on a server named updatecheck.exe. What category of artifacts does this belong to?
+
+<details> <summary>Show answer</summary> The suspicious process updatecheck.exe is a computer artifact. Specifically, it's related to active processes, which are key indicators of what was running on the system at the time of the incident. </details>
+
+4. A security analyst discovers that an attacker exfiltrated data using DNS queries. What type of artifact did the attacker leave behind?
+
+<details> <summary>Show answer</summary> The attacker left behind network artifacts — specifically in the DNS logs or packet captures — which could show abnormal patterns consistent with data exfiltration via DNS tunneling. </details>
+
+5. Why is capturing volatile memory (RAM) important during forensic investigations on a compromised computer?
+
+<details> <summary>Show answer</summary> RAM contains real-time, volatile evidence such as active processes, network connections, and encryption keys, all of which are lost once the device is powered off. Capturing RAM ensures critical information is preserved for later analysis. </details>
+
+6. What kinds of investigation artifacts can mobile devices provide during an inquiry?
+
+<details> <summary>Show answer</summary> Mobile devices can provide a variety of artifacts, including call logs, text messages, GPS data, cached files, application data, and records of deleted files — all of which can help reconstruct user behavior and potential data compromise. </details>
+
+7. How does understanding Locard’s Principle change the way a cybersecurity professional approaches an incident response?
+
+<details> <summary>Show answer</summary> Understanding Locard’s Principle encourages cybersecurity professionals to assume that every attack leaves traces, no matter how small. This approach promotes careful and thorough examination of systems, logs, and metadata during investigations. </details>
+
+8. Why must forensic investigators preserve both the original data and its metadata during evidence collection?
+
+<details> <summary>Show answer</summary> Metadata provides essential context, including timestamps, file paths, ownership, and access history. If metadata is not preserved accurately, the timeline and credibility of the evidence could be questioned, especially in legal proceedings. </details>
+
+9. What type of artifact would an investigator most likely retrieve from a company firewall during an investigation?
+
+<details> <summary>Show answer</summary> An investigator would retrieve network artifacts, such as log entries showing traffic flow, source and destination IP addresses, port usage, connection timestamps, and sometimes rule-based event alerts. </details>
+
+10. During an insider threat investigation, an employee claims they never transferred company files. The analyst finds a cloud sync app's cache on their mobile device with recent activity. Which principle and artifact type apply here?
+
+<details> <summary>Show answer</summary> Locard’s Principle applies because the act of transferring files leaves behind traces, even if the user denies it. The artifact type is mobile device artifacts, specifically cached data and sync logs from the cloud application. </details>
+
