Update 7.02 Conduct logging and monitoring activities.md

--- a/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
+++ b/DOMAIN7: Security Operations/7.02 Conduct logging and monitoring activities.md
@@ -1,2 +1,218 @@
 ## 7.2.1 Intrusion detection and prevention Systems (IDPS) ##
 
+One of the most common mistakes security newcomers make is thinking that cybersecurity is all about building tall walls — strong passwords, encryption, firewalls. But experienced practitioners know better: no matter how high the walls, someone will eventually attempt to sneak in or probe for weaknesses. This is where Intrusion Detection Systems (IDS) and Intrusion Prevention Systems (IPS) become your best allies.
+
+Think of IDS and IPS as the cybersecurity equivalent of motion detectors, security cameras, and automatic door locks — but in digital form. They're not there to prevent someone from approaching your perimeter (that's a firewall’s job); they're there to detect or block malicious actions when other controls fail or when something suspicious happens inside your "digital castle.”
+
+An **Intrusion Detection System (IDS)** is like a digital security guard whose job is to watch, analyze, and alert. It detects suspicious activities but won’t actively block them. Think of it as a smoke detector: it will sound the alarm, but it won’t stop the fire.
+
+An **Intrusion Prevention System (IPS)** goes a step further: not only does it detect, but it takes action. If IDS is your smoke detector, IPS is your sprinkler system — the moment malicious behavior is detected, it actively blocks or mitigates the threat, often before the damage is done.
+
+Now the question is: how do IDS and IPS decide what is "suspicious"?
+
+| Detection Approach | Description | Strengths | Weaknesses |
+|--------------------|-------------|-----------|------------|
+| **Knowledge-Based (Signature-Based) Detection** | Relies on predefined patterns of known threats. Like a bouncer checking faces against a “Most Wanted” list — if data matches a known malware signature, it’s flagged or blocked. | - Highly accurate for known threats <br> - Low false positives for well-defined patterns | - Cannot detect new/unknown threats (zero-days) <br> - Requires constant signature updates |
+| **Behavior-Based (Anomaly-Based) Detection** | Looks for deviations from normal activity. Like neighbors noticing a strange van circling at 2 a.m. — suspicious even if not on a watch list. | - Can catch unknown or emerging attacks <br> - Useful in dynamic environments | - Higher risk of false positives <br> - Needs time to learn “normal” behavior |
+| **Combined Approach** | Smart security teams use both methods to balance precision and coverage. | - Strong coverage across known and unknown threats | - More complexity in deployment and management |
+
+Any IDS/IPS deployment must be evaluated based on how well it distinguishes real threats from harmless activity. You’ll often hear four key terms:
+- **True Positive:** The system correctly identified a real attack.
+- **False Positive:** The system flagged something harmless as malicious (this leads to alert fatigue and desensitization).
+- **True Negative:** The system correctly ignored benign activity.
+- **False Negative:** The system failed to detect a real attack (the worst-case scenario).
+
+In the real world, no system is perfect. The goal is always to minimize false negatives (missed attacks) while keeping false positives (nuisance alerts) low enough that security teams don’t start ignoring the system.
+
+:necktie: Balancing false positives and false negatives is the art and science of IDS/IPS tuning.
+
+Another important distinction lies in where the IDS or IPS is deployed.
+- **Host-Based IDS (HIDS)** lives on individual machines. It watches for suspicious local events: logins, file changes, unusual processes.
+- **Network-Based IDS (NIDS)** sits on the network and monitors traffic flowing between systems.
+
+Both are valuable, and both serve distinct purposes. In most secure environments, you’ll find them working together — one watching the perimeter, the other monitoring internal activity.
+
+:link: [NIST SP 800-94](https://csrc.nist.gov/pubs/sp/800/94/final) is the Guide to Intrusion Detection and Prevention Systems (IDPS)
+
+### Open Questions ###
+
+1. What is the main difference between an Intrusion Detection System (IDS) and an Intrusion Prevention System (IPS)?  
+<details>
+  <summary>Show answer</summary>
+The main difference is that IDS detects and alerts about suspicious activity without taking direct action, while IPS both detects and actively prevents or blocks the malicious traffic or behavior.
+</details>
+
+2. In cybersecurity, how does knowledge-based detection differ from behavior-based detection?  
+<details>
+  <summary>Show answer</summary>
+Knowledge-based detection uses known signatures of threats to identify attacks, while behavior-based detection looks for anomalies — deviations from normal behavior — to detect potential new or unknown attacks.
+</details>
+
+3. Why might behavior-based detection generate more false positives compared to knowledge-based detection?  
+<details>
+  <summary>Show answer</summary>
+Behavior-based detection learns what “normal” looks like and flags deviations. This can result in more false positives, especially in dynamic environments where normal behavior changes frequently but isn't malicious.
+</details>
+
+4. What is a “false negative” in the context of IDS/IPS, and why is it considered dangerous?  
+<details>
+  <summary>Show answer</summary>
+A false negative happens when the system fails to detect an actual attack. This is dangerous because it gives a false sense of security, allowing malicious activity to go unnoticed and unaddressed.
+</details>
+
+5. Why would an organization choose to run an IDS in passive mode rather than active mode?  
+<details>
+  <summary>Show answer</summary>
+Organizations may run IDS in passive mode to avoid accidentally blocking legitimate business traffic or services, especially when the detection rules aren’t yet fully fine-tuned and could generate false positives.
+</details>
+
+6. Explain the difference between Host-Based IDS (HIDS) and Network-Based IDS (NIDS).  
+<details>
+  <summary>Show answer</summary>
+HIDS monitors activity and changes within a specific host or device (like file changes or logins), while NIDS monitors network traffic across the entire network to detect suspicious patterns or packets.
+</details>
+
+7. What is meant by the term "true positive" when discussing IDS alerts?  
+<details>
+  <summary>Show answer</summary>
+A "true positive" occurs when the IDS correctly detects and reports an actual attack, allowing the security team to investigate and respond in time.
+</details>
+
+8. How can a combination of host-based and network-based IDS improve an organization’s security posture?  
+<details>
+  <summary>Show answer</summary>
+Using both HIDS and NIDS provides visibility at two levels: network-wide threats and host-specific threats. This layered approach helps detect threats that might evade one system but get caught by the other.
+</details>
+
+9. Give an example of a real-world situation where knowledge-based detection would be more effective than behavior-based detection.  
+<details>
+  <summary>Show answer</summary>
+When an attacker uses a well-known exploit, such as a specific vulnerability in a software version (e.g., EternalBlue for SMB vulnerabilities), knowledge-based detection would immediately spot the signature and raise an alert faster than behavior-based detection.
+</details>
+
+10. Why is tuning IDS/IPS systems an important part of security operations?  
+<details>
+  <summary>Show answer</summary>
+Tuning is essential to minimize false positives (avoiding alert fatigue) and false negatives (avoiding missed attacks). A well-tuned IDS/IPS ensures the system is trustworthy and useful, rather than noisy or blind.
+</details>
+
+## 7.2.2 Security Information and Event Management (SIEM) ##
+
+Every firewall, router, application server, cloud service, and endpoint in your organization is constantly generating logs, status messages, and security events. Hidden inside that ocean of data are the clues you need to spot cyberattacks, misconfigurations, and insider threats before they turn into business disasters.
+
+But here's the problem: no human, no matter how talented, can manually review millions of events per second across a modern network. That's where SIEM comes into the picture — the Security Information and Event Management system.
+
+:necktie: In the world of cybersecurity, the challenge isn’t a shortage of data — it’s drowning in it.
+
+SIEM is a specialized platform designed to collect, centralize, and make sense of all the security-related data your environment produces. It’s the detective in the security team that never sleeps, tirelessly pulling together seemingly unrelated information from every corner of your digital estate, and transforming raw logs into actionable intelligence.
+
+But SIEM is more than just a log collector. If you picture your security operations center (SOC) as a control room, the SIEM is the central dashboard. It turns chaos into clarity, alerting your analysts when patterns suggest trouble and allowing them to drill down into the evidence.
+
+In the early days, SIEM systems were typically on-premises: racks of servers humming away in the data center, running software like Splunk, ArcSight, or QRadar. These systems required skilled administrators and a lot of hardware, which made them expensive and, in some cases, hard to scale. With the rise of cloud computing, new models emerged. Cloud-native SIEM solutions (like Microsoft Sentinel or IBM QRadar on Cloud) eliminate the need to maintain physical infrastructure, offering scalability on demand. These solutions often come with advanced machine learning capabilities right out of the box, allowing smaller security teams to punch above their weight.
+
+There’s also the hybrid model — a mix of on-premises and cloud — especially useful for organizations with strict regulatory requirements that prevent some data from leaving their physical control, but which still want cloud flexibility for analytics and long-term storage.
+
+:necktie: No matter the type, the goals remain the same: make the noise manageable, and highlight the signals that really matter.
+
+Let’s break down the services a SIEM provides:
+
+| Concept        | Definition                                                                 | Example                                                                                                   | Why It Matters                                                                                   |
+|----------------|-----------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------|
+| **Centralization** | SIEM gathers logs from multiple sources into one platform, providing a unified view of events. | A phishing email triggers logs across the email server, endpoint, network, and firewall. Without centralization, the attack timeline is fragmented. | Prevents missed incidents by giving analysts a complete picture of malicious activity. |
+| **Normalization**  | Translates diverse log formats into a common, standardized language.     | A firewall logs *ERR_BLOCK*, another logs *DENY*, and an app logs *ACCESS_REFUSED*. SIEM normalizes them all under “blocked connection.” | Enables accurate correlation and querying across different systems. |
+| **Correlation**    | Connects related events across systems to detect suspicious patterns.    | One failed login isn’t suspicious, but dozens of failed logins followed by success within seconds indicates a brute-force attack. | Finds real threats by linking behavior patterns, reducing noise and false alarms. |
+| **Alerting**       | Notifies the right team when suspicious activity is detected, enriched with context. | SIEM generates an alert for suspicious logins, including related logs, user info, and past incidents. | Ensures timely response — alerts become the start of an investigation, not the end. |
+
+
+### Open Questions ###
+
+1. Why is centralization an essential feature in a SIEM system, especially during a cybersecurity incident?  
+<details>
+  <summary>Show answer</summary>
+Centralization ensures that logs and security events from multiple systems are collected and available in one place. This allows security teams to reconstruct the full timeline of an incident across devices, rather than missing connections due to siloed data. Without centralization, critical clues can easily be overlooked.
+</details>
+
+2. How does normalization help a SIEM system make sense of data from multiple sources?  
+<details>
+  <summary>Show answer</summary>
+Normalization translates logs from different systems into a consistent, standardized format. Since every device has its own way of logging events, normalization allows the SIEM to compare and process data from diverse sources accurately, making correlation and analysis possible.
+</details>
+
+3. In the context of SIEM, what is correlation, and why is it more powerful than reviewing individual log entries?  
+<details>
+  <summary>Show answer</summary>
+Correlation links multiple events from different systems to reveal patterns of malicious activity. A single log entry might seem harmless, but when combined with related events (like failed logins, privilege escalation, and data transfer) it can expose a coordinated attack that wouldn’t be visible otherwise.
+</details>
+
+4. What is the main difference between a traditional on-premises SIEM and a cloud-native SIEM solution?  
+<details>
+  <summary>Show answer</summary>
+An on-premises SIEM is hosted on the organization’s own infrastructure, requiring internal maintenance and hardware. A cloud-native SIEM, by contrast, runs in the cloud and offers scalable storage and computing resources, often with advanced analytics like machine learning, without the burden of managing physical servers.
+</details>
+
+5. Why is it important for SIEM alerting to provide context along with the notification, rather than just flagging a single suspicious event?  
+<details>
+  <summary>Show answer</summary>
+Providing context with an alert helps security analysts act faster and more accurately. Instead of seeing just one suspicious event, analysts can immediately view related data — such as affected users, systems, past behaviors, and surrounding logs — which improves decision-making and reduces wasted effort on false alarms.
+</details>
+
+---
+
+## 7.2.3 Security Orchestration, automation and response (SOAR) ##
+
+Cybersecurity isn’t just about firewalls, rules, and alerts anymore — it’s about how quickly and intelligently you can respond. The threats are faster, more automated, and more adaptive than ever before. So your defense must be as well. This is where SOAR, Machine Learning, and AI step into the spotlight.
+
+Think of SOAR (Security Orchestration, Automation, and Response)  as the brain and nervous system of your security operations center (SOC). It doesn’t replace your analysts; it supercharges them. Imagine a typical day in a SOC: thousands of alerts, many of them false positives. Analysts are constantly switching tools — the SIEM, ticketing systems, threat intel feeds, logs, firewalls — while manually documenting every step. It’s exhausting, slow, and error-prone. SOAR takes those fragmented workflows and weaves them into a cohesive, automated system. It connects the tools, enforces consistency, and executes repetitive tasks faster than any human could. But it doesn’t act blindly. That’s where **playbooks** and **runbooks** come in.
+
+Here’s an analogy: A playbook is like your GPS route — it tells you where you’re going and why. A runbook is the set of exact turns you’ll make — the how.
+- **Playbooks** define high-level logic. For example: “If a phishing email is detected, extract sender data, check against known indicators of compromise (IOCs), isolate the endpoint, and notify HR.”
+- **Runbooks** automate the actual steps: “Query threat intel database → Extract domain → If domain reputation is low → Block domain on the mail gateway → Generate ticket in system X.”
+
+:bulb: In practice, this means that a SOAR platform can detect a suspicious login from a foreign country, enrich the alert with geolocation data and user behavior history, auto-disable the account if it meets the risk threshold, notify the SOC, and document everything in your case management system — all within seconds.
+
+Picture this: A user reports a suspicious email. The SOAR system kicks in:
+1. Extracts attachments and URLs
+2. Checks against threat intelligence feeds
+3. Sandboxes any files to analyze behavior
+4. Scans all mailboxes to identify similar emails
+5. Quarantines them automatically
+6. Creates a detailed case report
+7. Notifies HR if necessary
+
+What used to take a team hours can now happen in under a minute — consistently and accurately. This is the kind of workflow SOAR enables. And it’s not limited to phishing — malware analysis, brute-force response, insider threat triage — anything repeatable can be orchestrated.
+
+But automation alone isn’t enough. Threats evolve. Attackers don’t always leave signatures. That’s where machine learning (ML) comes into play. ML gives systems the ability to learn from data rather than being programmed with rigid rules.
+For example, consider user behavior. A rule-based system might say: “If a user logs in from China, alert.” But what if that user works in China?
+A machine learning model instead learns what “normal” looks like for that user — login times, locations, applications accessed — and flags deviations intelligently. This is known as anomaly detection.
+ML also shines in areas like:
+- Email filtering (identifying spam and phishing)
+- Endpoint protection (detecting unusual process behaviors)
+- Threat intelligence correlation (finding hidden connections between indicators)
+Whereas machine learning is about pattern recognition and prediction, artificial intelligence adds context and reasoning. AI systems can prioritize alerts based on asset criticality, assess intent from a series of actions, or suggest likely next steps in an attack chain.
+
+In SOAR environments, AI helps triage events — not just saying “this looks bad,” but suggesting why and what to do about it. It’s like having a junior analyst who’s read every security casebook and can make educated recommendations — instantly.
+
+:necktie: Why use SOAR? To scale your team’s effectiveness and reduce human error. Why trust ML and AI? Because attackers are already using them, and traditional defenses can’t keep up. What’s the risk? Automation without governance is dangerous. Every playbook needs review. Every ML model needs training. Every AI suggestion needs oversight.
+
+### Open Questions ###
+
+1. What is the primary function of a SOAR platform in a security operations center (SOC)?
+
+<details> <summary>Show answer</summary> SOAR (Security Orchestration, Automation, and Response) platforms are designed to automate and coordinate security operations workflows, allowing security teams to respond faster and more consistently to threats. By integrating tools and automating repetitive tasks, SOAR reduces manual effort, improves incident response times, and helps manage alert fatigue. </details>
+
+2. How do playbooks and runbooks differ in the context of SOAR workflows?
+
+<details> <summary>Show answer</summary> Playbooks represent high-level decision logic and response strategies — essentially the “what” and “why” of an incident response. Runbooks, on the other hand, contain the detailed, automated steps — the “how” — such as executing scripts, querying systems, or blocking IPs. Together, they define and automate security responses from logic to execution. </details>
+
+3. Why is machine learning particularly useful for detecting insider threats or unusual behavior?
+
+<details> <summary>Show answer</summary> Machine learning excels at identifying deviations from learned patterns. In the context of insider threats, ML can profile normal user behavior and alert on anomalies, such as unusual login times, access to sensitive files, or unexpected data transfers — even when such activity doesn't match a known signature or rule. </details>
+
+4. What is one major risk associated with deploying SOAR solutions without proper governance?
+
+<details> <summary>Show answer</summary> Without oversight, automated responses can cause unintended disruptions — such as isolating the wrong system, blocking legitimate users, or deleting critical logs. Poorly designed or unreviewed playbooks can amplify mistakes at machine speed, making governance, testing, and human-in-the-loop controls essential. </details>
+
+5. How does artificial intelligence enhance the effectiveness of a SOAR platform beyond traditional automation?
+
+<details> <summary>Show answer</summary> AI adds context-aware decision-making to automation. It can prioritize alerts based on asset criticality, suggest next steps in an attack sequence, and help analysts make sense of complex incidents. While automation handles known scenarios, AI helps in dynamic, ambiguous ones by mimicking analytical reasoning. </details>
+
